Improve the code in the investment transaction editor.

Actually it's pretty poorly written, I don't really know about the
investment editor's requirements so this just makes it safer.

I was not able to reproduce the reported crash in the 4.8 branch but
I think that this improvement is necessary.

BUG: 342181